<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.lgv.automation.ui</groupId>
    <artifactId>lgv-automation</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>LGV - Automation</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <bintray.repo>serenity/maven</bintray.repo>
        <bintray.package>serenity-cucumber4</bintray.package>
        <java.version>11</java.version>
        <maven.surefire.version>2.22.2</maven.surefire.version>
        <serenity.version>2.0.90</serenity.version>
        <!--<serenity.jira.version>1.1.3-rc.3</serenity.jira.version>-->
        <selenium.version>3.141.59</selenium.version>
        <skip.test>false</skip.test>
        <parallel.type>classes</parallel.type>
        <parallel.thread>2</parallel.thread>
        <io.cucumber.version>4.8.0</io.cucumber.version>
<!--        <tags>1.0</tags>-->
    </properties>


    <build>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
<!--            <plugin>-->
<!--                <groupId>org.codehaus.mojo</groupId>-->
<!--                <artifactId>versions-maven-plugin</artifactId>-->
<!--                <version>2.5</version>-->
<!--                <configuration>-->
<!--                    <generateBackupPoms>false</generateBackupPoms>-->
<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <skipTests>${skip.test}</skipTests>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <includes>
                        <include>**/features/**/*.java</include>
                    </includes>
                    <argLine>-Xmx2048m</argLine>
                    <!--                    <parallel>${parallel.type}</parallel>-->
                    <!--                    <threadCount>${parallel.thread}</threadCount>-->
                    <!--                    <forkCount>${parallel.thread}</forkCount>-->
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>net.serenity-bdd.maven.plugins</groupId>-->
<!--                <artifactId>serenity-maven-plugin</artifactId>-->
<!--                <version>${serenity.version}</version>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>com.lgv.automation.ui</groupId>-->
<!--                        <artifactId>lgv-automation</artifactId>-->
<!--                        <version>${project.version}</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--                <configuration>-->
<!--                    <tags>${tags}</tags>-->
<!--                    <reports>email</reports>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>serenity-reports</id>-->
<!--                        <phase>post-integration-test</phase>-->
<!--                        <goals>-->
<!--                            <goal>aggregate</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>com.github.temyers</groupId>-->
<!--                <artifactId>cucumber-jvm-parallel-plugin</artifactId>-->
<!--                <version>5.0.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>generateRunners</id>-->
<!--                        <phase>generate-test-sources</phase>-->
<!--                        <goals>-->
<!--                            <goal>generateRunners</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            &lt;!&ndash; Mandatory &ndash;&gt;-->
<!--                            &lt;!&ndash; List of package names to scan for glue code. &ndash;&gt;-->
<!--                            <glue>-->
<!--                                <package>lgv.automation.serenityCucumber.api.features</package>-->
<!--                            </glue>-->
<!--                            <featuresDirectory>src/test/resources</featuresDirectory>-->
<!--                            <parallelScheme>FEATURE</parallelScheme>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>bintray</name>

            <url>http://jcenter.bintray.com</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>dlcentral</id>
            <name>dlbintray</name>
            <url>http://dl.bintray.com/serenity/maven</url>
        </repository>
        <repository>
            <id>repo</id>
            <url>file://${project.basedir}/lib</url>
        </repository>
        <repository>
            <id>jvnet-nexus-staging</id>
            <url>http://maven.java.net/content/repositories/staging/</url>
            <layout>default</layout>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>bintray-plugins</name>
            <url>http://jcenter.bintray.com</url>
        </pluginRepository>
        <pluginRepository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>dlcentral</id>
            <name>dlbintray-plugins</name>
            <url>http://dl.bintray.com/serenity/maven</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.23.1-GA</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>7.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-api</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber4</artifactId>
            <version>1.0.29</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${io.cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>4.8.0</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${io.cucumber.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>*</artifactId>
                    <groupId>junit</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-jvm</artifactId>
            <version>${io.cucumber.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>gherkin</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd.maven.plugins</groupId>
            <artifactId>serenity-maven-plugin</artifactId>
            <version>${serenity.version}</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>net.serenity-bdd</groupId>-->
<!--            <artifactId>serenity-emailer</artifactId>-->
<!--            <version>2.0.40</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>28.1-jre</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.12</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>2.4.3</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.googlecode.lambdaj</groupId>-->
<!--            <artifactId>lambdaj</artifactId>-->
<!--            <version>2.3.3</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.31</version>
        </dependency>
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.0.b2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.1</version>
            <exclusions>
                <exclusion>
                    <artifactId>xml-apis</artifactId>
                    <groupId>xml-apis</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>jexcelapi</groupId>
            <artifactId>jxl</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.9</version>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>2.4.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>json-path</artifactId>
            <version>2.9.0</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20160212</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>3.8</version>
        </dependency>
        <dependency>
            <groupId>org.telegram</groupId>
            <artifactId>telegrambots</artifactId>
            <version>4.4.0.2</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>7.4.1.jre11</version>
        </dependency>
        <dependency>
            <groupId>postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>9.0-801.jdbc4</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.4.0-b180725.0427</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.4.0-b180725.0644</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>EnvironmentPR</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.version}</version>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <api.url>https://logivan-staging-pr-1277.herokuapp.com</api.url>
                <device.id>android</device.id>
                <platform>android</platform>
                <driver.authorization>Bearer ZM1iqziREprdnejZj5h1sNSMy14wdw</driver.authorization>
                <driver.id>2</driver.id>
                <broker.authorization>Bearer 3qtbfm4vpsreDNa-Eb9K5sn868Apxw</broker.authorization>
                <broker.email>automation_test143660@logivan.canh</broker.email>
                <ops.tool.authorization>Bearer Binmbjfg_mwYiRBeNSsnzwBPompYHg</ops.tool.authorization>
                <ops.tool.host>https://logivan-ops-staging-pr-1277.now.sh</ops.tool.host>
                <db.host>ec2-23-23-228-132.compute-1.amazonaws.com:5432</db.host>
                <db.name>dam0vcekgtsvtm</db.name>
                <db.user.name>liwmbjujnoattc</db.user.name>
                <db.password>053ee2956f6f40f88536f02c1bccac5031cd004075614d4d2e9f7d19fe677f41</db.password>
            </properties>
        </profile>
        <profile>
            <id>EnvironmentTestbed</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.version}</version>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <api.url>https://logivan-testbed1.herokuapp.com</api.url>
                <driver.authorization>Bearer JXKtGMhoosq4UDhfqXUxXexyhsCBuQ</driver.authorization>
                <broker.authorization>Bearer HEazcGQRVkWiEs5m2Wsnk_p8WhNrFA</broker.authorization>
                <broker.email>automation_test143660@logivan.canh</broker.email>
                <ops.tool.authorization>Bearer WK6Ww7T2h45HVbryLHqDzjemodxdQg</ops.tool.authorization>
                <os>mac</os>
                <browser.headless>false</browser.headless>
                <ops.tool.host>https://logivan-salestool-testbed1.firebaseapp.com</ops.tool.host>
                <db.host>ec2-54-204-39-46.compute-1.amazonaws.com:5432</db.host>
                <db.name>d40e6t5usbums1</db.name>
                <db.user.name>wknbuoidpauooy</db.user.name>
                <db.password>ce257496380460aa4fd8af79d8d91d69ff28cfcbfce5b16bfbf88557bc8e34c7</db.password>
            </properties>
        </profile>
        <profile>
            <id>EnvironmentProduction</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.version}</version>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <api.url>https://logivan.herokuapp.com</api.url>
                <ops.tool.authorization>Bearer y3Mqg6sPKNHYBQG8NcCGFj8TUUyHFg</ops.tool.authorization>
            </properties>
        </profile>
    </profiles>
</project>
